# tinybee-aligner

./: .gitignore  README.md  googleapis_cache.sqlite  hlm-ch1-batch_tr-pad.py  hlm-ch1-pad.py  package.json  pyproject-bare.toml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-p.txt  test1.py  wuch3_pad.py
data/: aset.lzma  cmat.lzma  corr1000x1100.lzma  fast-mdx_tr.py-  hlm-ch1-tr.txt  hlm_ch1_en_emb.lzma  hlm_ch1_en_tr.txt  hlm_ch1_zh_emb.lzma  hlm_emb_en160.lzma  hlm_emb_zh80.lzma  hlm_en.lzma  hlm_tr_para1000_emb.lzma  hlm_zh.lzma  hlm_zh_para1000_emb.lzma  orjson.bz2  para-corr-txt2-10_50-txt2-20_70.lzma  pset.lzma  shen300.lzma  shen300_600.lzma  shen600.lzma  shzh600.lzma  smat.lzma  src_blocks_zh.lzma  tgt_blocks_en.lzma  tset.lzma  txt1.lzma  txt2.lzma  wuch3-D512-en53xzh57-cmat.lzma
tests/: nll_matrix_wuch1.pkl  snsrel_yargmax_max.py  t_set99_wuch2.pkl  test_align_texts.py  test_dbscan_pairs.py  test_embed_text.py  test_find_pairs.py  test_gen_aset.py  test_gen_iset.py  test_gen_model.py  test_gen_row_alignment.py  test_lrtrace_tset.py  test_mdx_e2c.py  test_optics_wuch1.py  test_polyglot_sanity.py  test_shakespeare.py  test_tinybee.py  test_tk_plot.py
tinybee/: __init__.py  __main__.py  align_texts.py  cmat2tset.py  cos_matrix2.py  dbscan_pairs.py  docterm_scores.py  embed_text.py  en2zh.py  en2zh_tokens.py  fetch_sent_corr.py  find_pairs-.py-  find_pairs.py  gen_aset.py  gen_iset.py  gen_row_align.py  gen_row_alignment.py  gen_row_alignment.py-  gr_app.py  interpolate_pset.py  lazy_loader.py  linregress_tset.py  lowess_pairs.py  (+9 more)
(+7 files in other folders)
