[tool.poetry]
name = "tinybee"
version = "0.1.0"
description = "A tiny aligner for dualtext alignment"
authors = ["ffreemt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffreemt/tinybee"

[tool.poetry.dependencies]
python = "^3.6"
logzero = "^1.6.3"
httpx = "^0.16.1"
polyglot = "^16.7.4"
sentence-splitter = "^1.4"
more-itertools = "^8.6.0"
joblib = "^1.0.0"
cchardet = "^2.1.7"
tqdm = "^4.56.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
