[tool.poetry]
name = "tinybee"
version = "0.1.0"
description = "A tiny aligner for dualtext alignment"
authors = ["ffreemt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffreemt/tinybee-aligner"

[tool.poetry.dependencies]
python = "^3.7"
logzero = "^1.6.3"
polyglot = "^16.7.4"
sentence-splitter = "^1.4"
more-itertools = "^8.6.0"
joblib = "^1.0.0"
cchardet = "^2.1.7"
tqdm = "^4.56.0"
statsmodels = "^0.12.1"
httpx = "^0.17.0"
flake8 = "^3.8.4"
pyicu = "^2.6"
pycld2 = "^0.41"
morfessor = "^2.0.6"
halo = "^0.0.31"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.21.0"
flake8 = "^3.8.4"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
